--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "animate.css": "^4.1.1",
     "core-js": "^3.15.1",
     "gsap": "^3.9.0",
-    "nuxt": "^2.15.7",
-    "vue-content-placeholders": "^0.2.1"
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
