--- a/package.json
+++ b/package.json
@@ -13,21 +13,20 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "core-js": "^3.15.1",
-    "gsap": "^3.9.0",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "postcss": "^8.4.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
-    "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.2.0",
-    "autoprefixer": "^10.4.0",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
-    "postcss": "^8.4.5",
+    "nuxt-animejs": "^1.2.2",
+    "nuxt-gsap-module": "^1.6.0",
     "prettier": "^2.3.2",
     "tailwindcss": "^3.0.7"
   }
