--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "animate.css": "^4.1.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "postcss": "^8.4.5"
+    "postcss": "^8.4.5",
+    "vue-preloaders": "^2.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
+    "@nuxtjs/color-mode": "^2.1.1",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.2.0",
@@ -28,6 +30,8 @@
     "nuxt-animejs": "^1.2.2",
     "nuxt-gsap-module": "^1.6.0",
     "prettier": "^2.3.2",
+    "sass": "^1.45.2",
+    "sass-loader": "^10.2.0",
     "tailwindcss": "^3.0.7"
   }
 }
