--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "core-js": "^3.15.1",
+    "fibers": "^5.0.0",
     "nuxt": "^2.15.7",
     "postcss": "^8.4.5",
     "vue-preloaders": "^2.0.0"
@@ -31,7 +32,7 @@
     "nuxt-gsap-module": "^1.6.0",
     "prettier": "^2.3.2",
     "sass": "^1.45.2",
-    "sass-loader": "^10.2.0",
+    "sass-loader": "^10.2.1",
     "tailwindcss": "^3.0.7"
   }
 }
